fixing overflow-x problem

--- a/docs/styles/style.scss
+++ b/docs/styles/style.scss
@@ -16,6 +16,7 @@ body {
   font-size: 18px;
   background-color: hsl(0, 0%, 98%);
   max-width: 1441px;
+  overflow-x: hidden;
 
   .btn-request-invite {
     padding: 10px 25px;
